# gstreamer-sdk__gst-playback-test

./: README  autogen.sh  configure.ac
src/: Makefile.am  playback-test.c
